--- a/app/templates/app/cobranza_cliente.html
+++ b/app/templates/app/cobranza_cliente.html
@@ -78,7 +78,7 @@
         <div class="panel panel-card recent-activites">
             <!-- Start .panel -->
             <div class="panel-heading">
-                <h4 class="panel-title">Facturas</h4>
+                <h4 class="panel-title">Documentos x Cobrar</h4>
                 <div class="panel-actions">
                     <a href="#" class="panel-action panel-action-toggle" data-panel-toggle></a>
                     <a href="#" class="panel-action panel-action-dismiss" data-panel-dismiss></a>
@@ -90,16 +90,19 @@
                         {% for factura in facturas %}
                             <div class="form-horizontal">
                                 <div class="form-group">
-                                    <div class="col-sm-4"><strong>No Factura:</strong> </div>
-                                    <div class="col-sm-8">{{ factura.nodoc }}</div>
+                                    <div class="col-sm-2"><strong>No Doc:</strong> </div>
+                                    <div class="col-sm-3">{{ factura.nodoc }}</div>
+                                    <div class="col-sm-3"><strong>Saldo:</strong> </div>
+                                    <div class="col-sm-4">{{ factura.saldo_factura }}</div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="col-sm-4"><strong>Fecha Emisión:</strong></div>
-                                    <div class="col-sm-8">{{ factura.fecha }}</div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-sm-4"><strong>Fecha Vencimiento:</strong></div>
+                                    <div class="col-sm-2"><strong>Emisión:</strong></div>
+                                    <div class="col-sm-3">{{ factura.fecha }}</div>
+                                    <div class="col-sm-3"><strong>Vencimiento:</strong></div>
                                     <div class="col-sm-4">{{ factura.fecha_vence }}</div>
+                                </div>
+                                <div class="form-group">
+
                                 </div>
                                 <div class="btn-group">
                                     <button class="btn btn-3d btn-success">Abonar</button>
@@ -126,77 +129,7 @@
             <div class="panel-body">
                 <div class="nano has-scrollbar" style="height:240px">
                     <div class="nano-content pad-all" tabindex="0" style="right: -17px;">
-                        <div class="panel panel-warning">
-                            <div class="panel-heading">{{ comentarios|length }} Comentarios</div>
-                            <div class="panel-body">
-                                <br/>
-                                {% for comentario in comentarios %}
-                                    <div class="media">
-                                    <div class="media-left">
-                                        <a href="#">
-                                            <img src="/static/app/images/avtar-2.jpg" class="media-object img-circle" alt="" width="60">
-                                        </a>
-                                    </div>
-                                    <div class="media-body">
-                                        <h4 id="media-heading" class="media-heading"><a href="">{{ comentario.usuario }}</a>
-                                            <small>10 min</small>
-                                            <a href="#media-heading">
-                                                <span class="anchorjs-icon"></span>
-                                            </a>
-                                        </h4>
-                                        <p>{{ comentario.descripcion }}</p>
-                                    </div>
-                                </div>
-                                    <hr>
-                                {% endfor %}
-
-                                {% comment %}<div class="media">
-                                    <div class="media-left">
-                                        <a href="#">
-                                            <img src="/static/app/images/avtar-2.jpg" class="media-object img-circle" alt="" width="60">
-                                        </a>
-                                    </div>
-                                    <div class="media-body">
-                                        <h4 id="media-heading" class="media-heading"><a href="">Susan Grant</a>
-                                            <small>10 min</small>
-                                            <a href="#media-heading">
-                                                <span class="anchorjs-icon"></span>
-                                            </a>
-                                        </h4>
-                                        <p>Donec ac massa tortor. In hac habitasse platea dictumst. Nam blandit fringilla faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae nisi eget metus semper congue.</p>
-                                        <p>Fusce ullamcorper placerat tortor, placerat consequat diam cursus posuere.</p>
-                                    </div>
-                                </div>
-                                <hr>
-                                <div class="media">
-                                    <div class="media-left">
-                                        <a href="#">
-                                            <img src="/static/app/images/avtar-1.jpg" class="media-object img-circle" alt="" width="60">
-                                        </a>
-                                    </div>
-                                    <div class="media-body mb-lg">
-                                        <h4 id="media-heading1" class="media-heading"><a href="">Dustin Dunn</a>
-                                            <small>20 min</small>
-
-                                        </h4>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
-                                        lacinia congue felis in faucibus.
-                                        <hr>
-                                        <div class="media">
-                                            <div class="media-left">
-                                                <a href="#">
-                                                    <img src="/static/app/images/avtar-3.jpg" class="media-object img-circle" alt="" width="60">
-                                                </a>
-                                            </div>
-                                            <div class="media-body">
-                                                <h4 id="nested-media-heading" class="media-heading"><a href="">Marcus Gomez</a>
-                                                    <small>1 hour</small>
-
-                                                </h4>Integer ac nisl et urna gravida malesuada. Vivamus fermentum libero vel felis aliquet interdum.</div>
-                                        </div>
-                                    </div>
-                                </div>{% endcomment %}
-                            </div>
-                        </div>
+                        <div id="conten-comentarios"></div>
                     </div>
                 </div>
                 <hr>
@@ -254,17 +187,21 @@
                 data: {comentario:comment,id_cliente:cliente},
                 success: function (result) {
                     data=result[0];
-                    alert(data.mensaje);
+                    $("#post-comment").val("");
+                    cargarComentarios();
                 }
             });
         })
+        cargarComentarios();
+    })
+    function cargarComentarios() {
         $.ajax({
             url:"../get_comentario_cliente/?id={{ cliente.id }}",
             type:"GET",
             success:function (result) {
-                alert(result)
+                $("#conten-comentarios").empty().html(result);
             }
         });
-    })
+    }
     </script>
 {% endblock %}
