--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -21,7 +21,8 @@
         <link href="/static/app/css/color.css" rel="stylesheet">
         <link href="/static/app/css/app.min.1.css" rel="stylesheet">
         <link href="/static/app/css/fullcalendar.min.css" rel="stylesheet">
-
+        {% block css-content %}
+        {% endblock css-content %}
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
