--- a/app/templates/app/partial/_facturas_pendientes.html
+++ b/app/templates/app/partial/_facturas_pendientes.html
@@ -17,7 +17,7 @@
         </div>
         <div class="btn-group">
             <button onclick="cargarPagoFactura({{ factura.id }}, false);" class="btn btn-3d btn-success">Abonar</button>
-            <button onclick="cargarPagoFactura({{ factura.id }}, true);"  class="btn btn-3d btn-primary">Cancelar</button>
+            <button onclick="cargarPagoFactura({{ factura.id }}, true);"  class="btn btn-3d btn-primary">Pagar</button>
         </div>
     </div>
     <div class="hr-line-dashed"></div>
