--- a/app/templates/app/partial/_gestion_add.html
+++ b/app/templates/app/partial/_gestion_add.html
@@ -4,7 +4,7 @@
         <div class="col-sm-8">
             <select id="tipo_gestion" class="form-control" >
                 {% for tipo_estion in tipo_gestiones %}
-                <option value="{{ tipo_estion.id }}">{{ tipo_estion.nombre }}</option>
+                <option value="{{ tipo_estion.id }}">{{ tipo_estion.nombre|title }}</option>
                 {% endfor %}
             </select>
         </div>
@@ -16,6 +16,21 @@
         <label class="col-sm-4 control-label">Descripcion:</label>
         <div class="col-sm-8">
             <textarea id="gestion_descripcion" cols="2" class="form-control" placeholder="Descripcion" type="text"></textarea>
+        </div>
+    </div>
+</div>
+<div class="hr-line-dashed"></div>
+ <div class="row">
+    <div class="form-group">
+        <label class="col-sm-4 control-label">Porgramación:</label>
+        <div class="col-sm-8">
+            <div class="input-group">
+              <span class="input-group-addon" id="basic-addon1">
+                  programar
+                  <input type="checkbox" id="gestion_programar" onclick="programarGestion()">
+              </span>
+              <input id="gestion_programacion"  type="text" disabled="disabled" class="form-control datetimepicker" placeholder="Fecha de programación" aria-describedby="basic-addon1">
+            </div>
         </div>
     </div>
 </div>
